--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-baseurl: "/writing" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "dondarionxzxzxz.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
